Mon Jan  3 11:57:29 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* stabsread.c (read_enum_type): Use TARGET_INT_BIT not sizeof (int).

	* breakpoint.c (frame_in_dummy): Check PC as well as frame.

Mon Jan  3 02:47:03 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* mdebugread.c (psymtab_to_symtab_1):  Only pass N_STAB symbols
	to process_one_symbol.
	* symtab.c (find_pc_psymbol):  Search global_psymbols as well to
	avoid caching a bad endaddr in find_pc_partial_function.

Sun Jan  2 21:41:17 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* config/m68k/tm-sun3.h: Don't define BELIEVE_PCC_PROMOTION.

Sat Jan  1 04:35:23 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* infrun.c (wait_for_inferior):  Do not step or step resume past
	the end of a one-line function we just stepped into.

Fri Dec 31 14:33:49 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* nindy-share/nindy.c: Fix order of arguments to store_unsigned_integer
	(second and third arguments were reversed).
	(say): Use varargs.

Fri Dec 31 12:13:47 1993  Jim Kingdon  (kingdon@deneb.cygnus.com)

	* remote-mips.c: Add timeout parameter to mips_request and
	mips_receive_packet.
	(callers): pass in mips_receive_wait except mips_initialize (where
	we use it to clean up the kludge where we had been changing
	mips_receive_wait temporarily) and mips_wait (where we pass in
	-1 for no timeout).

Fri Dec 31 14:33:49 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* stack.c (print_block_frame_locals): Also print LOC_BASEREG variables.

Fri Dec 31 06:55:38 1993  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* symtab.c (find_methods): Call fprintf_symbol_filtered with DMGL_ANSI.

Thu Dec 30 10:16:54 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* values.c (unpack_long): Fix garbled error message.

	* remote-mips.c (mips_error): New function.
	* remote-mips.c: Use it instead of error() most places.
	* remote-mips.c (mips_receive_packet): New arg throw_error.